Fix for blocker Bug 190124 & Bug 190121. r=jkeiser, sr=blizzard, a=roc+moz.  Send Pixel Units to GetPixelValue, not GetIntValue